# guardrails-service-demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  guardrails-service-article.md
examples/: guardrails_service_demo.ipynb
examples/data/: baseline.json  malicious_baseline.json
src/: constants.py  dataset_manager.py
src/agent/: chat_service.py  models.py  server.py
src/guardrails_service/: __init__.py  models.py  server.py  utils.py  vector_db.py
src/ui/: app.py
src/ui/static/: app.js  styles.css
src/ui/templates/: index.html
