[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrails-service"
version = "0.1.0"
description = "A Python service for content filtering and validation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "chromadb==1.4.0",
    "numpy==1.24.3",
    "transformers==4.35.0",
    "torch==2.0.0",
    "black>=23.11.0",
    "ipykernel>=6.30.1",
    "ruff==0.7.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-semantic-conventions>=0.1.0",
    "arize-phoenix-otel",
    "arize-phoenix[evals]",
    "flask>=3.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0",
    "pre-commit==3.6.0",
]

examples = [
    "ipykernel==6.30.1",
    "pandas==2.1.3",
]

[project.scripts]
guardrails-service = "guardrails_service.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
